[gd_scene load_steps=14 format=3 uid="uid://ds0s6dw8skubu"]

[ext_resource type="Theme" uid="uid://f1t8okxjimt2" path="res://ui/base_theme.tres" id="1_yv2ts"]
[ext_resource type="Script" path="res://ui/pause_menu/pause_menu.gd" id="2_f8cr8"]
[ext_resource type="AudioStream" uid="uid://cgr7yxitx7ww3" path="res://assets/original_sfx/ui_pause.wav" id="3_it8q3"]
[ext_resource type="AudioStream" uid="uid://c6gk44kojsfmf" path="res://assets/original_sfx/ui_select.wav" id="4_muf0j"]
[ext_resource type="Texture2D" uid="uid://453j18wu2x47" path="res://ui/audio_icons.png" id="5_mpjth"]

[sub_resource type="Gradient" id="Gradient_irjim"]
offsets = PackedFloat32Array(0, 0.5, 0.5, 1)
colors = PackedColorArray(0.2928, 0.402, 0.48, 1, 0.337255, 0.427451, 0.490196, 1, 0.482353, 0.603922, 0.690196, 1, 0.483, 0.60375, 0.69, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nh50u"]
gradient = SubResource("Gradient_irjim")
fill_from = Vector2(1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqrfr"]
atlas = ExtResource("5_mpjth")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_db2aa"]
atlas = ExtResource("5_mpjth")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lghs2"]
atlas = ExtResource("5_mpjth")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0onap"]
atlas = ExtResource("5_mpjth")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ix6p"]
atlas = ExtResource("5_mpjth")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2tlo"]
atlas = ExtResource("5_mpjth")
region = Rect2(16, 0, 16, 16)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yv2ts")
script = ExtResource("2_f8cr8")
audio_paused = ExtResource("3_it8q3")
audio_select = ExtResource("4_muf0j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
texture = SubResource("GradientTexture2D_nh50u")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0

[node name="button_sfx" type="TextureButton" parent="VBoxContainer/TextureRect/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
toggle_mode = true
texture_normal = SubResource("AtlasTexture_yqrfr")
texture_pressed = SubResource("AtlasTexture_db2aa")
texture_disabled = SubResource("AtlasTexture_lghs2")
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 128
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="button_music" type="TextureButton" parent="VBoxContainer/TextureRect/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
toggle_mode = true
texture_normal = SubResource("AtlasTexture_0onap")
texture_pressed = SubResource("AtlasTexture_5ix6p")
texture_disabled = SubResource("AtlasTexture_m2tlo")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 32

[node name="resume_button" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../home_button")
focus_neighbor_bottom = NodePath("../restart_button")
theme_override_font_sizes/font_size = 128
text = "RESUME"

[node name="restart_button" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../resume_button")
focus_neighbor_bottom = NodePath("../home_button")
theme_override_font_sizes/font_size = 128
text = "RESTART"

[node name="home_button" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../restart_button")
focus_neighbor_bottom = NodePath("../resume_button")
theme_override_font_sizes/font_size = 128
text = "HOME"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -12.0
bus = &"ui"
